// ***********************
//  Euskalbar - CHANGELOG
// ***********************

3.12 bertsioa
================
- Egungo euskararen hiztegia barran sartu da. (#66)
- Lur hiztegi entziklopedikoa eta Lur entziklopedia tematikoa barran sartu dira. (#129)
- EHUskaratuak EHUren itzulpen-memorien webgunea barran sartu da. (#137)
- Hobespen berria: kurtsorearen fokua kutxan utzi edo leihora eraman.  (#131)
- Hobespenen "Kontsulta aurreratua" fitxa aldatu da. (#138)
- Hiztegien menua eguneratu da. (#139)
- Euskalbarren bilaketa-kutxa hutsik dagoenean agertzen den jakinarazpenaren itxura hobetu da. (#140)
- Testuinguru-menua beste modu batera antolatu da, gero eta baliabide gehiago izanik jadanik ez baitziren ongi sartzen pantailan. (#141)
- Akatsen konponketa.

3.11 bertsioa
================
- Euskalterm berria integratu da. (#121)
- Energia hiztegia ezabatu da, ez baitago jadanik eskuragarri EEEren webgunean. (#135)
- Kodea txukuntzea Mozillak ezarritako baldintzak betetzeko. (#130)
- Aurrekoa betetzeko, hainbat hiztegi desaktibatu dira bilaketa konbinatuetan. Hurrengo bertsio batean aktibatuko dira berriro. Desaktibatu diren hiztegiak: ZT hiztegia, Telekomunikazio hiztegia, Labayru, Mokoroa, Danobat.

3.10 bertsioa
================
- Danobat hiztegia integratu da. (#127)
- Hiztegiak eskutatu eta erakusteko aukera hobespenetara eraman da. (#128)
- 3000 eta Adorez desaktibatu dira, ez baitute funtzionatzen.

3.9 bertsioa
================
- Firefox 4 bertsioan funtziona dezan egokitu da Euskalbar. (#103)
- Mokoroaren helbidea aldatu dute -> konpondu dira botoi bidezko bilaketa eta bilaketa konbinatua. (#107)
- Hasierako leihoa erakusten duen kodea aldatu da. (#108)
- Euskalbarren botoia nabigazio-barrara eraman da, hiztegien barran leku gehiago edukitzeko.
- Euskalbarrentzako ikono berria sortu da, Elementary ikono-multzoan eta Zaldieroa letra-tipoan oinarrituta. 
- Firefox menuaren euskarria gehitu da hiztegien menuarentzako.