@@ -24,9 +24,10 @@ pref("extensions.euskalbar.labayru.visible", true);
 pref("extensions.euskalbar.zehazki.visible", true);
 pref("extensions.euskalbar.morris.visible", true);
 pref("extensions.euskalbar.opentran.visible", true);
+pref("extensions.euskalbar.ehuskaratuak.visible", true);
 pref("extensions.euskalbar.batua.visible", true);
 pref("extensions.euskalbar.oeh.visible", true);
-pref("extensions.euskalbar.ehuskaratuak.visible", true);
+pref("extensions.euskalbar.hauta.visible", true);
 pref("extensions.euskalbar.lurhe.visible", true);
 pref("extensions.euskalbar.luret.visible", true);
 pref("extensions.euskalbar.harluxet.visible", true);
@@ -58,9 +59,10 @@ pref("extensions.euskalbar.labayru.onkey", false);
 pref("extensions.euskalbar.zehazki.onkey", false);
 pref("extensions.euskalbar.morris.onkey", false);
 pref("extensions.euskalbar.opentran.onkey", false);
+pref("extensions.euskalbar.ehuskaratuak.onkey", false);
 pref("extensions.euskalbar.batua.onkey", false);
 pref("extensions.euskalbar.oeh.onkey", false);
-pref("extensions.euskalbar.ehuskaratuak.onkey", false);
+pref("extensions.euskalbar.hauta.onkey", false);
 pref("extensions.euskalbar.lurhe.onkey", false);
 pref("extensions.euskalbar.luret.onkey", false);
 pref("extensions.euskalbar.harluxet.onkey", false);
