@@ -7,6 +7,7 @@
 - Egungo euskararen hiztegia barran sartu da. (#66)
 - Lur hiztegi entziklopedikoa eta Lur entziklopedia tematikoa barran sartu dira. (#129)
 - EHUskaratuak EHUren itzulpen-memorien webgunea barran sartu da. (#137)
+- Hauta lanerako euskal hiztegia barran integratu da. (#104)
 - Hobespen berria: kurtsorearen fokua kutxan utzi edo leihora eraman.  (#131)
 - Hobespenen "Kontsulta aurreratua" fitxa aldatu da. (#138)
 - Hiztegien menua eguneratu da. (#139)
